--- a/html/login.htm
+++ b/html/login.htm
@@ -24,5 +24,6 @@
            
         </div>
     </body>
+    <script src="../script/service.js"></script>
     <script src="../script/script.js"></script>
 </html>
