--- a/html/dashboard.htm
+++ b/html/dashboard.htm
@@ -97,7 +97,7 @@
                     
                     <div class="flex flex-col justify-end gap-3 mt-6 sm:flex-row">
                         <button onclick="addModal(-1)" class="px-6 py-2 rounded-sm">No</button>
-                        <button id="yes" onclick="addNewNews()" class="px-6 py-2 rounded-sm shadow-sm dark:bg-violet-600 dark:text-gray-50">Yes</button>
+                        <button id="yes" onclick="addNews()" class="px-6 py-2 rounded-sm shadow-sm dark:bg-violet-600 dark:text-gray-50">Yes</button>
                         <button id="save" onclick="saveNewsChanges()" class="hidden px-6 py-2 rounded-sm shadow-sm dark:bg-violet-600 dark:text-gray-50">Save</button>
                     </div>
                     </div>
