--- a/html/dashboard.htm
+++ b/html/dashboard.htm
@@ -78,7 +78,7 @@
            <!-- news  -->
             <div class="hidden " id="newsPage">
                 <div class="p-3 flex justify-end w-full">
-                    <button onclick="addModal(1)" class="px-8 py-3 font-semibold border rounded dark:border-gray-800 dark:text-gray-800"><i class="fa-solid fa-plus mr-2"></i> Add News</button>
+                    <button onclick="addNewsModal(1)" class="px-8 py-3 font-semibold border rounded dark:border-gray-800 dark:text-gray-800"><i class="fa-solid fa-plus mr-2"></i> Add News</button>
                 </div>
                 <div id="showAllNews" class=" grid grid-cols-3 gap-5">
                     <!-- news dynamic -->
@@ -96,7 +96,7 @@
                     <select name="" id="category"></select>
                     
                     <div class="flex flex-col justify-end gap-3 mt-6 sm:flex-row">
-                        <button onclick="addModal(-1)" class="px-6 py-2 rounded-sm">No</button>
+                        <button onclick="addNewsModal(-1)" class="px-6 py-2 rounded-sm">No</button>
                         <button id="yes" onclick="addNews()" class="px-6 py-2 rounded-sm shadow-sm dark:bg-violet-600 dark:text-gray-50">Yes</button>
                         <button id="save" onclick="saveNewsChanges()" class="hidden px-6 py-2 rounded-sm shadow-sm dark:bg-violet-600 dark:text-gray-50">Save</button>
                     </div>
