--- a/html/login.htm
+++ b/html/login.htm
@@ -6,20 +6,20 @@
         <title>Login</title>
         <link rel="stylesheet" href="../css/output.css">
     </head>
-    <body class="bg-black">
+    <body class="bg-blue-200">
         <div class="w-full max-w-md p-8 space-y-3 rounded-xl dark:bg-white top-12 fixed left-1/2 -translate-x-1/2 dark:text-gray-800">
             <h1 class="text-2xl font-bold text-center">Login</h1>
             <div novalidate="" action="" class="space-y-6">
                 <div class="space-y-1 text-sm">
                     <label for="username" class="block dark:text-gray-600">Username</label>
-                    <input type="text" name="username" id="username" placeholder="Username" class="w-full px-4 py-3 rounded-md dark:border-gray-300 dark:bg-gray-50 dark:text-gray-800 focus:dark:border-violet-600">
+                    <input type="text" name="username" id="username" placeholder="Username" class="w-full px-4 py-3 rounded-md dark:border-gray-300 dark:bg-gray-50 dark:text-gray-800 focus:dark:border-blue-600">
                 </div>
                 <div class="space-y-1 text-sm">
                     <label for="password" class="block dark:text-gray-600">Password</label>
-                    <input type="text" name="password" id="password" placeholder="Password" class="w-full px-4 py-3 rounded-md dark:border-gray-300 dark:bg-gray-50 dark:text-gray-800 focus:dark:border-violet-600">
+                    <input type="text" name="password" id="password" placeholder="Password" class="w-full px-4 py-3 rounded-md dark:border-gray-300 dark:bg-gray-50 dark:text-gray-800 focus:dark:border-blue-600">
                    
                 </div>
-                <button onclick="signIn()" class="block w-full p-3 text-center rounded-sm dark:text-gray-50 dark:bg-violet-600">Sign in</button>
+                <button onclick="signIn()" class="block w-full p-3 text-center rounded-sm dark:text-gray-50 dark:bg-blue-600">Sign in</button>
             </div>
            
         </div>
