--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Real BackEnd</title> 
         <link rel="stylesheet" href="css/output.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     </head>
     <body class="bg-gray-100 text-gray-800">
           <header class="bg-white shadow">
@@ -16,7 +18,7 @@
 
       <nav class="flex flex-col md:flex-row items-center gap-4 w-full md:w-auto">
         <ul id="categories" class="flex space-x-4 text-sm font-medium text-gray-600">
-          <!-- caaaategories -->
+          <!-- categories -->
         </ul>
 
         <!-- Search -->
@@ -28,7 +30,7 @@
         </div>
 
         <!-- Login -->
-        <a href="#" class="text-sm bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">
+        <a href="html/login.htm" class="text-sm bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">
           Login
         </a>
       </nav>
@@ -37,6 +39,9 @@
 <main>
     <div id="allNews" class="grid grid-cols-3 mt-3 gap-4">
 <!-- all news -->
+    </div>
+    <div>
+      
     </div>
 </main>
  <footer class="mt-12 py-6 text-center text-sm text-gray-500">
