--- a/index.htm
+++ b/index.htm
@@ -13,14 +13,13 @@
           <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col md:flex-row md:items-center md:justify-between gap-4">
       <div class="flex justify-between items-center w-full md:w-auto">
-        <a href="#" class="text-2xl font-bold text-blue-600">NewsDaily</a>
+        <a href="index.htm" class="text-2xl font-bold text-blue-600">NewsDaily</a>
       </div>
 
       <nav class="flex flex-col md:flex-row items-center gap-4 w-full md:w-auto">
         <ul id="categories" class="flex space-x-4 text-sm font-medium text-gray-600">
           <!-- categories -->
         </ul>
-
         <!-- Search -->
         <div class="flex items-center border border-gray-300 rounded-lg overflow-hidden px-2 py-1 bg-gray-50">
           <input type="text" placeholder="Search..." class="bg-transparent outline-none px-2 py-1 text-sm w-full">
@@ -28,7 +27,6 @@
             🔍
           </button>
         </div>
-
         <!-- Login -->
         <a href="html/login.htm" class="text-sm bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">
           Login
@@ -41,7 +39,6 @@
 <!-- all news -->
     </div>
     <div>
-      
     </div>
 </main>
  <footer class="mt-12 py-6 text-center text-sm text-gray-500">
