using export and import

--- a/details.htm
+++ b/details.htm
@@ -76,8 +76,8 @@
     © 2025 NewsDaily. All rights reserved.
   </footer>
 
-  <script src="script/service.js"></script>
-  <script src="script/details.js"></script>
+
+  <script type="module" src="script/details.js"></script>
   
 </body>
 </html>
