--- a/index.htm
+++ b/index.htm
@@ -45,6 +45,6 @@
     © 2025 NewsDaily. All rights reserved.
   </footer>
     </body>
-    <script src="script/service.js"></script>
-    <script src="script/script.js"></script>
+ 
+    <script type="module" src="script/script.js"></script>
  </html>
