--- a/html/dashboard.htm
+++ b/html/dashboard.htm
@@ -122,6 +122,6 @@
        </div>
  
     </body>
-    <script src="../script/service.js"></script>
-    <script src="../script/dashboard.js"></script>
+
+    <script type="module" src="../script/dashboard.js"></script>
 </html>
