--- a/html/login.htm
+++ b/html/login.htm
@@ -19,11 +19,16 @@
                     <input type="text" name="password" id="password" placeholder="Password" class="w-full px-4 py-3 rounded-md dark:border-gray-300 dark:bg-gray-50 dark:text-gray-800 focus:dark:border-blue-600">
                    
                 </div>
-                <button onclick="signIn()" class="block w-full p-3 text-center rounded-sm dark:text-gray-50 dark:bg-blue-600">Sign in</button>
+                <div >
+                        <p class=" text-sm text-center dark:text-gray-600">Don't have an account yet?
+                            <a rel="noopener noreferrer" href="../html/register.htm" class="hover:underline dark:text-blue-600">Sign up</a>.
+                        </p>
+                    </div>
+                <button onclick="signIn()" class="block w-full p-3 text-center rounded-sm dark:text-gray-50 dark:bg-blue-600">Log in</button>
             </div>
            
         </div>
     </body>
-    <script src="../script/service.js"></script>
-    <script src="../script/script.js"></script>
+   
+    <script type="module" src="../script/script.js"></script>
 </html>
